Update and rename index-backup.html to index.html

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <body>
 
       <header>
-        <h1>Curso-de-vim</h1>
-        <p>Un curso sobre el editor de código Vim.</p>
+        <h1>Aprende a usar Vim desde 0</h1>
+        <p>El curso de habla hispana definitivo para aprender a usar este editor de código</p>
       </header>
 
       <div id="banner">
