--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <a href="https://github.com/AnderRasoVazquez/curso-de-vim" class="button fork"><strong>View On GitHub</strong></a>
         <div class="downloads">
-          <span>Downloads:</span>
+          <span>Descarga el :</span>
           <ul>
             <li><a href="https://github.com/AnderRasoVazquez/curso-de-vim/zipball/master" class="button">ZIP</a></li>
             <li><a href="https://github.com/AnderRasoVazquez/curso-de-vim/tarball/master" class="button">TAR</a></li>
@@ -39,55 +39,93 @@
         <ul></ul>
       </nav>
       <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Bienvenido a Aprende a usar Vim desde 0</h3>
+<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+<input type="hidden" name="cmd" value="_s-xclick">
+<input type="hidden" name="hosted_button_id" value="3U9MAMVXRUVKU">
+<input type="image" src="https://www.paypalobjects.com/es_ES/ES/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal. La forma rápida y segura de pagar en Internet.">
+<img alt="" border="0" src="https://www.paypalobjects.com/es_ES/i/scr/pixel.gif" width="1" height="1">
+</form>
+<br>
+        <h3>Bienvenido a Aprende a usar Vim desde 0</h3>
 
-<h3>Bienvenido a Aprende a usar Vim desde 0</h3>
+<p></p>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
+<pre><code>"Vim es un editor de código que requiere una curva de
+aprendizaje, te sentirás muy lento las primeras veces que lo uses,
+pero llega un momento en el que algo hace clic,
+y empiezas a editar código tan rápido que parece imposible."
 </code></pre>
 
+<p>Este curso tenía pensado ser simplemente una guía de iniciación al editor de código <a href="http://www.vim.org/">Vim</a>, pero cada vez que encontraba algo nuevo o interesante sobre este magnífico programa lo he ido añadiendo y finalmente, lo que en un principio iban a ser simplemente un par de artículos, han acabado por convertirse en un verdadero curso completo de 16 capítulos. He pasado meses disfrutando mientras escribía este curso, hicieron falta muchísimas horas (y muchos cafés) para buscar información útil y organizarla a conciencia para que pudiera ser comprendida de la forma más sencilla posible. Creo sinceramente que <b>aprender a usar Vim es una de las decisiones que más tiempo le puede ahorrar a la larga a cualquiera que esté interesado en la programación</b>. Esa es la razón por la que he dedicado tanto tiempo a compartir las bondades de este editor.</p>
 
+<p>Cuando descubrí Vim, no había una fuente de información en el idioma español con la que empezar y adquirir una destreza significativa. Es cierto que si buscamos encontraremos muchos artículos sobre este programa, pero no suelen pasar de una breve introducción. Creo que con este curso hemos logrado que toda persona interesada en aprender un poquito de este editor tenga <b>un punto inicial de referencia por donde empezar</b>. Todavía queda muchísimo por hacer y esa es la razón por la que este curso va a seguir desarrollándose en GitHub.</p>
 
+<h3>Estado actual del proyecto</h3>
 
+<h4>2015-02-09</h4>
 
+<p>Hasta el momento tenemos 16 entregas:</p>
+
+<ol>
+    <li>Introducción a Vim</li>
+    <li>Editar al estilo Vim</li>
+    <li>El modo normal</li>
+    <li>El modo insertar</li>
+    <li>El modo visual</li>
+    <li>El modo de comandos</li>
+    <li>Editar múltiples archivos</li>
+    <li>Paneles y pestañas</li>
+    <li>Cómo moverse rápido por los archivos</li>
+    <li>Cómo moverse rápido por los archivos 2</li>
+    <li>Dominar los registros</li>
+    <li>El poder de las macros</li>
+    <li>Patrones</li>
+    <li>Sustituciones</li>
+    <li>Comandos globales</li>
+    <li>Autocompletado</li>
+</ol>
+
+<h3>Tareas pendientes</h3>
+
+<ul>
+    <li>Terminar la migración de Bitelia a este repositorio (blog donde se inició esta guía) y en formato Markdown para que sea sencillo contribuir para todos. (12/16)</li>
+    <li>Pasar la guía a formato PDF, en este momento está en Markdown.</li>
+</ul>
+
+<h3>Créditos y contribuidores</h3>
+
+<ul>
+    <li><a href="http://vimcasts.org/">Vimcasts</a>: una página web que muestra vídeos gratuitos de lo que podemos hacer con Vim y donde tienen publicaciones interesantes.</li>
+    <li><a href="https://plus.google.com/communities/105049811056605918816">La comunidad Vim de Google+</a>: la gente comparte las cosas interesantes que encuentra, muchas de ellas han sido material para estos artículos.</li>
+    <li><a href="http://vim.wikia.com/wiki/Vim_Tips_Wiki">La wiki de Vim</a>: ha sido un buen recurso para consultar dudas.</li>
+    <li>Todos esos blogs de Internet que me descubrieron Vim y que me han enseñado trucos geniales para compartir aquí.</li>
+    <li>Y <b>a todos vosotros</b> que habéis seguido el curso hasta ahora, muchas gracias.</li>
+</ul>
+
+<h3>Soporte y contacto</h3>
+
+<p>Podéis contactar conmigo enviándome un correo a la dirección <a href="mailto:anderraso@gmail.com">anderraso@gmail.com</a></p> Este proyecto es y siempre será gratuito, pero si te ha servido y te gustaría que lo siguiera desarrollando puedes hacer un donativo mediante el siguiente botón:
+
+<p>Ahora que el curso ha adquiridoi un volumen considerable, mi objetivo es abrirlo para que toda persona interesada en él pueda colaborar. Esa es la razón por la que he decidido alojar este curso en GitHubi. La idea es seguir sacando entregas en este repositorio y que la gente proponga mejoras o destaque fallos, con el objetivo de hacer el mejor curso de Vim de habla hispana posible. <b>Pienso que la educación y todo material de aprendizaje deberían ser siempre gratuitos y accesibles a todo el mundo</b>. Por eso, el curso de Vim es y siempre será gratuito, estudiaré las licencias libres que se puedan usar para que todo el mundo pueda compartirlo sin condiciones. Quizá en un futuro podamos <b>hacer un ebook de aspecto profesional</b> si recaudamos los suficientes fondos, pero la información contenida en él siempre podrá ser accesible vía GitHub.</p>
+
+<p><b>En definitiva, si el curso te ha parecido útil y te gustaría dar tu apoyo a este proyecto de educación libre invitándome a un café, puedes hacerlo desde el siguiente botón. Toda contribución será bienvenida sin importar su importe y servirá para mantener este curso actualizado.</b></p>
+
+<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+<input type="hidden" name="cmd" value="_s-xclick">
+<input type="hidden" name="hosted_button_id" value="3U9MAMVXRUVKU">
+<input type="image" src="https://www.paypalobjects.com/es_ES/ES/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal. La forma rápida y segura de pagar en Internet.">
 <img alt="" border="0" src="https://www.paypalobjects.com/es_ES/i/scr/pixel.gif" width="1" height="1">
+</form>
 
 
-
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
       <footer>
-        <p>Project maintained by <a href="https://github.com/AnderRasoVazquez">AnderRasoVazquez</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
+        <p>Proyecto mantenido por <a href="https://github.com/AnderRasoVazquez">AnderRasoVazquez</a></p>
+        <p><small>Alojado en GitHub Pages — Tema por <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
       </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
-  </body>
-</html>
+  
+</body></html>
