--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
       <div id="banner">
         <span id="logo"></span>
 
-        <a href="https://github.com/AnderRasoVazquez/curso-de-vim" class="button fork"><strong>View On GitHub</strong></a>
+        <a href="https://github.com/AnderRasoVazquez/curso-de-vim" class="button fork"><strong>Colabora en el curso desde GitHub</strong></a>
         <div class="downloads">
-          <span>Descarga el :</span>
+          <span>Descargar curso:</span>
           <ul>
             <li><a href="https://github.com/AnderRasoVazquez/curso-de-vim/zipball/master" class="button">ZIP</a></li>
             <li><a href="https://github.com/AnderRasoVazquez/curso-de-vim/tarball/master" class="button">TAR</a></li>
