--- a/index-old.html
+++ b/index-old.html
@@ -24,7 +24,7 @@
       <div id="banner">
         <span id="logo"></span>
 
-        <a href="https://github.com/AnderRasoVazquez/curso-de-vim" class="button fork"><strong>Colabora en el curso en GitHub</strong></a>
+        <a href="https://github.com/AnderRasoVazquez/curso-de-vim" class="button fork"><strong>Colabora en el curso desde GitHub</strong></a>
         <div class="downloads">
           <span>Descargar curso:</span>
           <ul>
@@ -105,9 +105,9 @@ y empiezas a editar código tan rápido que parece imposible."
 
 <h3>Soporte y contacto</h3>
 
-<p>Podéis contactar conmigo enviándome un correo a la dirección <a href="mailto:anderraso@gmail.com">anderraso@gmail.com</a></p> Este proyecto es y siempre será gratuito, pero si te ha servido y te gustaría que lo siguiera desarrollando puedes hacer un donativo mediante el siguiente botón:
+<p>Podéis contactar conmigo enviándome un correo a la dirección <a href="mailto:anderraso@gmail.com">anderraso@gmail.com</a></p>
 
-<p>Ahora que el curso ha adquiridoi un volumen considerable, mi objetivo es abrirlo para que toda persona interesada en él pueda colaborar. Esa es la razón por la que he decidido alojar este curso en GitHubi. La idea es seguir sacando entregas en este repositorio y que la gente proponga mejoras o destaque fallos, con el objetivo de hacer el mejor curso de Vim de habla hispana posible. <b>Pienso que la educación y todo material de aprendizaje deberían ser siempre gratuitos y accesibles a todo el mundo</b>. Por eso, el curso de Vim es y siempre será gratuito, estudiaré las licencias libres que se puedan usar para que todo el mundo pueda compartirlo sin condiciones. Quizá en un futuro podamos <b>hacer un ebook de aspecto profesional</b> si recaudamos los suficientes fondos, pero la información contenida en él siempre podrá ser accesible vía GitHub.</p>
+<p>Ahora que el curso ha adquirido un volumen considerable, mi objetivo es abrirlo para que toda persona interesada en él pueda colaborar. Esa es la razón por la que he decidido alojar este curso en GitHub. La idea es seguir sacando entregas en este repositorio y que la gente proponga mejoras o destaque fallos, con el objetivo de hacer el mejor curso de Vim de habla hispana posible. <b>Pienso que la educación y todo material de aprendizaje deberían ser siempre gratuitos y accesibles a todo el mundo</b>. Por eso, el curso de Vim es y siempre será gratuito, estudiaré las licencias libres que se puedan usar para que todo el mundo pueda compartirlo sin condiciones. Quizá en un futuro podamos <b>hacer un ebook de aspecto profesional</b> si recaudamos los suficientes fondos, pero la información contenida en él siempre podrá ser accesible vía GitHub.</p>
 
 <p><b>En definitiva, si el curso te ha parecido útil y te gustaría dar tu apoyo a este proyecto de educación libre invitándome a un café, puedes hacerlo desde el siguiente botón. Toda contribución será bienvenida sin importar su importe y servirá para mantener este curso actualizado.</b></p>
 
